[package]
name = "stylus-provider"
version = "0.1.11"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-provider"
repository = "https://github.com/OffchainLabs/stylus-provider"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Compute provider for Stylus"

[dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
bincode = { version = "1.3.3", default-features = false }
mini-alloc = "0.4.2"
stylus-sdk = "0.8.1"
hex = "0.4.3"
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7", default-features = false}
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7", default-features = false}
getrandom = { version = "0.2", features = ["js"] }


[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "stylus-hello-world"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
