[package]
name = "stylus-provider"
version = "0.1.11"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-provider"
repository = "https://github.com/OffchainLabs/stylus-provider"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Compute provider for Stylus"

[dependencies]
alloy-primitives = { version = "=0.8.20", default-features = false, features = ["tiny-keccak"] }
alloy-sol-types = { version = "=0.8.20", default-features = false }
alloy-sol-macro = { version = "=0.8.20", default-features = false }
bincode = { version = "1.3.3", default-features = false }
mini-alloc = { version = "0.4.2", default-features = false }
stylus-sdk = { version = "0.8.4", default-features = false, features = ["stylus-test"] }
hex = "0.4.3"
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
getrandom = { version = "0.2", features = ["custom"] }
lean-imt = { version = "0.1.1", default-features = false }
num-bigint = { version = "0.4.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
sha3 = { version = "0.10.0", default-features = false }
fhe = { git = "https://github.com/gnosisguild/fhe.rs", branch="floatOp-replacement", version = "0.1.0-beta.7", default-features = false}
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", branch="floatOp-replacement", version = "0.1.0-beta.7", default-features = false}
openzeppelin-crypto = { git = "https://github.com/OpenZeppelin/rust-contracts-stylus", default-features = false }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
alloy = { version = "0.8.2", features = ["full"]}
rand = "0.8"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "stylus-provider"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"
